# af2d_code

./: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  distance.cpp  distance.h  io.cpp  io.h  lower_envelope.cpp  lower_envelope.h  ode_solver.cpp  ode_solver.h  pslg.cpp  pslg.h  quadtree.cpp  quadtree.h  segment_splitter.cpp  segment_splitter.h  triangle_wrapper.cpp  triangle_wrapper.h
tests/: CMakeLists.txt  test_distance.cpp  test_end_to_end.cpp  test_io.cpp  test_lower_envelope.cpp  test_ode_solver.cpp  test_pslg.cpp  test_quadtree.cpp  test_segment_splitter.cpp  test_triangle_wrapper.cpp
tests/test_data/: 1indexed.poly  1indexed_companion.node  1indexed_companion.poly  comments.poly  square.node  square.poly  square_with_hole.poly  zero_vertices.poly
